logo change and hopefully header fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Gaazzeebo LLC | Innovative Software Solutions</title>
 
     <!-- Company Logo -->
-    <link rel="icon" href="image/gaazzeebo-logo.png" type="image/png">
+    <link rel="icon" href="image/transpo.png" type="image/png">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
