--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="image/gaazzeebo-logo.png" alt="Gaazzeebo Logo" class="small-logo">
+                <img src="image/transpo.png" alt="Gaazzeebo Logo" class="small-logo">
 
             </div>
     
