--- a/templates.html
+++ b/templates.html
@@ -9,7 +9,7 @@
     <title>Pre-Designed Website Templates for Businesses | Gaazzeebo LLC</title>
 
 <!-- Company Logo -->
-<link rel="icon" href="image/gaazzeebo-logo.png" type="image/png">
+<link rel="icon" href="image/transpo.png" type="image/png">
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
 <link rel="stylesheet" href="templates.css">
 
 <!-- Preload important assets -->
-<link rel="preload" href="image/gaazzeebo-logo.png" as="image">
+<link rel="preload" href="image/transpo.png" as="image">
 
 <!-- Header styles-->
 <link rel="stylesheet" href="Header.css">
@@ -51,7 +51,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="image/gaazzeebo-logo.png" alt="Gaazzeebo Logo" class="small-logo">
+                <img src="image/transpo.png" alt="Gaazzeebo Logo" class="small-logo">
             </div>
     
             <ul class="nav-links">
