--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="image/gaazzeebo-logo.png" alt="Gaazzeebo Logo" class="small-logo">
+                <img src="image/transpo.png" alt="Gaazzeebo Logo" class="small-logo">
             </div>
     
             <ul class="nav-links">
