--- a/about.html
+++ b/about.html
@@ -477,7 +477,8 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="image/transpo.png" alt="Gaazzeebo Logo" class="small-logo">
+                <img src="image/gaazzeebo-logo.png" alt="Gaazzeebo Logo" class="small-logo">
+                <h1 class="rainbow-text">Gaazzeebo LLC</h1>
             </div>
     
             <ul class="nav-links">
@@ -514,9 +515,9 @@
             <h2 class="about-title"><span class="glow-blue">Who We Are</span></h2>
             <div class="about-grid">
                 <div class="about-info">
-                    <p><strong>Gaazzeebo LLC</strong> is a <span class="glow-orange">premier software company</span> located in the heart of Tampa, Florida. We specialize in designing and developing cutting-edge websites that help businesses connect with their target audiences in <span class="glow-blue">powerful</span> and meaningful ways.</p>
-                    <p>Since our founding, we have strived to push the boundaries of <span class="glow-orange">innovation</span>, providing top-tier, secure, and user-friendly digital experiences. Our team is comprised of industry experts who are passionate about helping businesses of all sizes <span class="glow-blue">grow</span> and thrive online.</p>
-                    <p><strong>Our Mission:</strong> To deliver personalized and innovative web solutions that empower businesses to establish a <span class="glow-orange">robust digital footprint</span>.</p>
+                    <p><strong>Gaazzeebo LLC</strong> is a <span class="glow-orange">web design company</span> located in <strong>Tampa, Florida</strong>. We deliver appealing, affordable websites. Our team specializes in the design and development of cutting-edge websites, helping your business connect with target demographics.</p>
+                    <p>Our mission is to, <span class="glow-orange">“Forge a powerful digital footprint for our clientele."</span></p>
+                    <p>Every client works alongside a designated designer and project manager. Utilizing <strong>Amazon Web Services</strong>, we push the boundaries of <span class="glow-blue">innovation</span>, providing top-tier, secure, and user-friendly digital experiences.</p>
                 </div>
                 <div class="about-image">
                     <img src="image/about-us.jpg" alt="Gaazzeebo LLC Team">
@@ -532,17 +533,17 @@
                 <div class="value-item">
                     <img src="image/innovation-icon.png" alt="Innovation Icon">
                     <h3><span class="glow-blue">Innovation</span></h3>
-                    <p>We stay at the forefront of web technology to ensure our clients always receive modern, advanced solutions.</p>
+                    <p>We remain at the forefront of web technology, ensuring our clients receive modern, unparalleled solutions. </p>
                 </div>
                 <div class="value-item">
                     <img src="image/security-icon.png" alt="Security Icon">
                     <h3><span class="glow-blue">Security</span></h3>
-                    <p>Security is a top priority in everything we build. Our solutions are designed to keep your data safe and secure.</p>
+                    <p>Security is the top priority in everything we build. Our solutions are designed to keep your data safe and secure.</p>
                 </div>
                 <div class="value-item">
                     <img src="image/teamwork-icon.png" alt="Teamwork Icon">
                     <h3><span class="glow-blue">Teamwork</span></h3>
-                    <p>We work closely with our clients, understanding their needs and providing personalized solutions that meet their business goals.</p>
+                    <p>We work closely with our clients, understanding their needs, and providing personalized solutions, exceeding their business goals.</p>
                 </div>
             </div>
         </div>
@@ -554,7 +555,7 @@
             <div class="message-content">
                 <img src="image/founder.jpg" alt="Founder Jack Liselli" class="founder-image">
                 <blockquote>
-                    <p>"At Gaazzeebo LLC, we're not just building businesses; we're crafting legacies. Every project we embark upon is fueled by our unwavering belief in the <span class="glow-blue">power of innovation</span>. Here, we transform bold ideas into tangible successes, pushing boundaries to redefine what's possible. Our journey is one of <span class="glow-orange">passion, precision, and perseverance</span>. Whether you're taking your first steps or striding towards new horizons, we're committed to illuminating your path in the <span class="glow-blue">digital universe</span>."</p>
+                    <p>"At Gaazzeebo LLC we curate platforms to help businesses succeed. Every project we embark upon is fueled by our unwavering belief in the <span class="glow-blue">power of innovation</span>. Here, we transform bold ideas into tangible success, pushing boundaries to redefine what's possible. Our journey is one of <span class="glow-orange">passion, precision, and perseverance</span>. I am excited and committed to forge your path in the digital universe."</p>
                     <cite>– Jack Liselli, Founder & CEO of Gaazzeebo LLC</cite>
                 </blockquote>
             </div>
@@ -567,7 +568,7 @@
             <div class="message-content">
                 <img src="image/cofounder.jpg" alt="Co-Founder Carter Watts" class="cofounder-image">
                 <blockquote>
-                    <p>"At Gaazzeebo LLC, our mission transcends mere financial stewardship; we're architects of <span class="glow-blue">economic innovation</span>. My role is to ensure that our fiscal strategies not only support but propel our creative ventures into realms of unprecedented growth. Here, every financial decision is a step towards crafting a future where <span class="glow-orange">value creation</span> and <span class="glow-blue">technological advancement</span> go hand in hand. Together with our team, we're not just planning for the next quarter; we're envisioning the next era of digital excellence."</p>
+                    <p>"We started this company to provide businesses with opportunities for exponential growth. We will finish with a track record exemplifying our commitment to the success and growth of others. Our team adds unique <span class="glow-orange">value creation</span> and <span class="glow-blue">technological advancement</span>. We strive to grow alongside our clientele. Together, we are envisioning the next era of digital excellence."</p>
                     <cite>– Carter Watts, Co-Founder & CFO of Gaazzeebo LLC</cite>
                 </blockquote>
             </div>
