--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Gaazzeebo LLC | Innovative Software Solutions</title>
 
     <!-- Company Logo -->
-    <link rel="icon" href="image/transpo.png" type="image/png">
+    <link rel="icon" href="image/gaazzeebo-logo.png" type="image/png">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -284,7 +284,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="image/transpo.png" alt="Gaazzeebo Logo" class="small-logo">
+                <img src="image/gaazzeebo-logo.png" alt="Gaazzeebo Logo" class="small-logo">
             </div>
     
             <ul class="nav-links">
@@ -351,7 +351,7 @@
         <!-- New Call to Action Section -->
         <section class="cta-section">
             <h2>Why Choose Gaazzeebo LLC?</h2>
-            <p>At Gaazzeebo, we prioritize customer satisfaction with solutions that are tailored to your business. Our innovative web designs, powerful software development, and top-notch maintenance services ensure your business stays ahead in the digital world. Let's make your vision a reality!</p>
+            <p>We offer straight forward pricing for clean, sleek, tailored to your business. Our innovative web designs, powerful software development, and top-notch maintenance services ensure your business stays ahead in the digital world. Let's make your vision a reality! </p>
             <a href="contact.html" class="cta-btn">Get Started Today</a>
         </section>
     </main>
