--- a/services.html
+++ b/services.html
@@ -567,7 +567,7 @@ header nav {
     <header>
         <nav>
             <div class="logo">
-                <img src="image/transpo.png" alt="Gaazzeebo Logo" class="small-logo">
+                <img src="image/gaazzeebo-logo.png" alt="Gaazzeebo Logo" class="small-logo">
             </div>
     
             <ul class="nav-links">
@@ -621,7 +621,7 @@ header nav {
                             <div class="card-front">
                                 <img src="image/software-dev-icon.png" alt="Software Development Icon">
                                 <h3>Software Development</h3>
-                                <p>We offer custom software development services, building applications that solve specific business challenges.</p>
+                                <p>We offer custom software development services, building websites that solve specific business challenges. </p>
                             </div>
                         </div>
                     </div>
@@ -634,7 +634,7 @@ header nav {
                             <div class="card-front">
                                 <img src="image/site-maintenance-icon.png" alt="Website Maintenance Icon">
                                 <h3>Website Maintenance</h3>
-                                <p>Our website maintenance services ensure your site remains secure, updated, and optimized for performance.</p>
+                                <p>Our website maintenance services ensure your site remains optimal, secure, and up to date.</p>
                             </div>
                         </div>
                     </div>
@@ -667,19 +667,19 @@ header nav {
    <!-- Enhanced Testimonials Section -->
 <section class="testimonials">
     <div class="container">
-        <h2>What Our Clients Say</h2>
+        <h2>Testimonials</h2>
         <div class="testimonials-grid">
             <div class="testimonial-item">
-                <p>"Gaazzeebo LLC's innovative approach to accessibility has been phenomenal. Their development of our hiking trail mapping application has opened up new outdoor adventures for disabled veterans and mobility-impaired individuals. It's not just an app; it's a gateway to freedom."</p>
-                <strong>- Peter Sloan, Project Lead at Beneficial Designs</strong>
+                <p>"Their development of our hiking trail mapping application has opened up new outdoor adventures for disabled veterans and mobility-impaired individuals. It's not just an app; it's a gateway to freedom."</p>
+                <strong>Beneficial Designs</strong>
             </div>
             <div class="testimonial-item">
-                <p>"The team at Gaazzeebo LLC has exceeded our expectations. Their dedication to creating technology that enhances quality of life is evident in the trail app they developed for us. It's precise, user-friendly, and truly makes a difference."</p>
-                <strong>- Emily Carter, Director at Quality of Life Plus</strong>
+                <p>"Their dedication to creating technology that enhances quality of life is evident in the trail app they developed for us. It's precise, user-friendly, and truly makes a difference."</p>
+                <strong>Quality of Life Plus</strong>
             </div>
             <div class="testimonial-item">
-                <p>"Thanks to Gaazzeebo LLC, our community at Move United can now explore trails with confidence. Their application is not only a tool but a companion for those looking to overcome mobility challenges through sport and recreation."</p>
-                <strong>- Alex Harmon, Community Coordinator at Move United</strong>
+                <p>"Their application is not only a tool but a companion for those looking to overcome mobility challenges through sport and recreation."</p>
+                <strong>Move United</strong>
             </div>
         </div>
     </div>
