--- a/about.html
+++ b/about.html
@@ -477,8 +477,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="image/gaazzeebo-logo.png" alt="Gaazzeebo Logo" class="small-logo">
-                <h1 class="rainbow-text">Gaazzeebo LLC</h1>
+                <img src="image/transpo.png" alt="Gaazzeebo Logo" class="small-logo">
             </div>
     
             <ul class="nav-links">
