--- a/Resources/Foodtruck/Template 1/index.html
+++ b/Resources/Foodtruck/Template 1/index.html
@@ -54,8 +54,8 @@
             <div class="menu-item">
                 <img src="images/grilled-cheese.jpg" alt="Grilled Cheese Sandwich" loading="lazy">
                 <div class="menu-info">
-                    <h3>Grilled Cheese Sandwich</h3>
-                    <p>Golden grilled cheese with a side of tomato soup.</p>
+                    <h3>Grilled Steak</h3>
+                    <p>Perfectly grilled to ur preferfection</p>
                     <span class="price">$7.99</span>
                 </div>
             </div>
@@ -70,8 +70,8 @@
             <div class="menu-item">
                 <img src="images/smoothies.jpg" alt="Smoothies" loading="lazy">
                 <div class="menu-info">
-                    <h3>Fresh Smoothies</h3>
-                    <p>Fresh fruit smoothies available in various flavors.</p>
+                    <h3>Grilled Chicken Salad</h3>
+                    <p>All the best flabors combined into one!</p>
                     <span class="price">$5.99</span>
                 </div>
             </div>
