--- a/templates.html
+++ b/templates.html
@@ -91,11 +91,11 @@
         <!-- Template 1: Street Eats Design -->
         <div class="template-card">
             <video class="template-video" src="videos/foodtruck-template1.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Street Eats Design</h4>
-            <p>Immerse your customers in a feast for the eyes with vibrant visuals and an interactive menu that makes ordering a breeze. Features include:</p>
+            <h4>Gournmet Truck</h4>
+            <p>Immerse your customers in a feast for the eyes with vibrant visuals and an interactive website. Features include:</p>
             <ul>
-                <li>Live social media feed integration</li>
-                <li>Dynamic menu with daily specials</li>
+                <li>Full Menu with featured Items</li>
+                <li>Integreated Map with daily location key</li>
                 <li>Responsive design for all devices</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal1')">Preview & Customize</button>
@@ -104,7 +104,7 @@
         <!-- Template 2: Truck Feast Layout -->
         <div class="template-card">
             <video class="template-video" src="videos/foodtruck-template2.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Truck Feast Layout</h4>
+            <h4>Mobile Munchies</h4>
             <p>Showcase your culinary journey with a layout that tells your story. Key features:</p>
             <ul>
                 <li>Integrated map for truck location tracking</li>
@@ -154,12 +154,12 @@
         <!-- Template 1: Entrepreneur Hub -->
         <div class="template-card">
             <video class="template-video" src="videos/smallbiz-template1.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Entrepreneur Hub</h4>
-            <p>Perfect for service-based businesses, this template offers:</p>
+            <h4>Your Voice</h4>
+            <p>Perfect for online and store front businesses, this template offers:</p>
             <ul>
-                <li>Service showcase with booking functionality</li>
-                <li>Testimonials slider</li>
-                <li>SEO-optimized for local search</li>
+                <li>Online Market integration</li>
+                <li>User interation</li>
+                <li>Advanced visuial features</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal5')">Preview & Customize</button>
         </div>
@@ -167,12 +167,12 @@
         <!-- Template 2: Startup Ignite -->
         <div class="template-card">
             <video class="template-video" src="videos/smallbiz-template2.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Startup Ignite</h4>
-            <p>Designed for the modern startup with:</p>
+            <h4>Inform Me</h4>
+            <p>Designed for the business information:</p>
             <ul>
-                <li>Interactive product demos</li>
-                <li>Integration with CRM tools</li>
-                <li>Dynamic blog section for thought leadership</li>
+                <li>Full search optimization</li>
+                <li>Chat bot</li>
+                <li>additional advanced features</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal6')">Preview & Customize</button>
         </div>
@@ -180,11 +180,11 @@
         <!-- Template 3: Business Boost -->
         <div class="template-card">
             <video class="template-video" src="videos/smallbiz-template3.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Business Boost</h4>
+            <h4>Perfect Start up</h4>
             <p>Ideal for growing businesses, features include:</p>
             <ul>
                 <li>Scalable design to grow with your business</li>
-                <li>Easy-to-update product/service listings</li>
+                <li>more advanaced chatbot</li>
                 <li>Lead capture forms for marketing</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal7')">Preview & Customize</button>
@@ -222,11 +222,11 @@
         <!-- Template 1: Online Shop Pro -->
         <div class="template-card">
             <video class="template-video" src="videos/ecommerce-template1.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Hire me!</h4>
-            <p>Your all-in-one solution for online retail:</p>
+            <h4>software Resume</h4>
+            <p>Your all-in-one solution to avoid a boring resume:</p>
             <ul>
-                <li>Customizable product pages</li>
-                <li>Integrated payment gateways</li>
+                <li>Customizable</li>
+                <li>live link integration</li>
                 <li>Responsive design for all devices</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal9')">Preview & Customize</button>
@@ -235,12 +235,12 @@
         <!-- Template 2: Retail Master -->
         <div class="template-card">
             <video class="template-video" src="videos/ecommerce-template2.mp4" autoplay loop muted controls playsinline></video>
-            <h4>senior Level experience</h4>
+            <h4>Basic emplate</h4>
             <p>Boost your sales with:</p>
             <ul>
-                <li>Interactive product sliders</li>
-                <li>AI-driven product recommendations</li>
-                <li>High-conversion checkout process</li>
+                <li>Nav link header</li>
+                <li>Full personal content</li>
+                <li>Additional Vsuals to stand out</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal10')">Preview & Customize</button>
         </div>
@@ -292,7 +292,7 @@
             <p>Highlight your listings with:</p>
             <ul>
                 <li>Interactive property maps</li>
-                <li>Virtual tour integration</li>
+                <li>Previously sold properties</li>
                 <li>Easy navigation for clients</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal13')">Preview & Customize</button>
