--- a/templates.html
+++ b/templates.html
@@ -117,7 +117,7 @@
         <!-- Template 3: Mobile Munchies -->
         <div class="template-card">
             <video class="template-video" src="videos/foodtruck-template3.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Mobile Munchies</h4>
+            <h4>Food Truck Delight</h4>
             <p>Designed for the foodie on the move, this template emphasizes quick access to:</p>
             <ul>
                 <li>Real-time location updates</li>
@@ -130,12 +130,12 @@
         <!-- Template 4: Gourmet on the Go -->
         <div class="template-card">
             <video class="template-video" src="videos/foodtruck-template4.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Gourmet on the Go</h4>
+            <h4>More Basic</h4>
             <p>Elevate your gourmet offerings with a sophisticated design that includes:</p>
             <ul>
-                <li>Chef's blog and recipe insights</li>
-                <li>Video backgrounds of food preparation</li>
-                <li>Event booking for catering services</li>
+                <li>Completed page integrated scroll feature</li>
+                <li>Full Menu for your customization</li>
+                <li>Location Tracking so your customers know where you are</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal4')">Preview & Customize</button>
         </div>
@@ -194,11 +194,11 @@
         <div class="template-card">
             <video class="template-video" src="videos/smallbiz-template4.mp4" autoplay loop muted controls playsinline></video>
             <h4>Corporate Charm</h4>
-            <p>Catering to businesses looking for a corporate edge:</p>
+            <p>COMING SOON</p>
             <ul>
-                <li>Corporate event calendar</li>
-                <li>Team member profiles</li>
-                <li>Investor relations page</li>
+                <li>COMING SOON</li>
+                <li>COMING SOON</li>
+                <li>COMING SOON</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal8')">Preview & Customize</button>
         </div>
@@ -235,7 +235,7 @@
         <!-- Template 2: Retail Master -->
         <div class="template-card">
             <video class="template-video" src="videos/ecommerce-template2.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Basic emplate</h4>
+            <h4>Basic Template</h4>
             <p>Boost your sales with:</p>
             <ul>
                 <li>Nav link header</li>
@@ -248,8 +248,8 @@
         <!-- Template 3: Shop Express -->
         <div class="template-card">
             <video class="template-video" src="videos/ecommerce-template3.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Software Engineer</h4>
-            <p>Launch quickly with:</p>
+            <h4>Construction Portfolio</h4>
+            <p>Show the world your craft:</p>
             <ul>
                 <li>Streamlined user experience</li>
                 <li>Quick product filters</li>
@@ -261,12 +261,12 @@
         <!-- Template 4: Fashion Forward -->
         <div class="template-card">
             <video class="template-video" src="videos/ecommerce-template4.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Founded a Software Company</h4>
+            <h4>Easy Money</h4>
             <p>Set trends with:</p>
             <ul>
                 <li>High-definition lookbooks</li>
                 <li>Virtual fitting room integration</li>
-                <li>Social media shopping features</li>
+                <li>skill integration</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal12')">Preview & Customize</button>
         </div>
@@ -288,7 +288,7 @@
         <!-- Template 1: Realty Showcase -->
         <div class="template-card">
             <video class="template-video" src="videos/realtor-template1.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Realty Showcase</h4>
+            <h4>Elite Luxury Estates</h4>
             <p>Highlight your listings with:</p>
             <ul>
                 <li>Interactive property maps</li>
@@ -302,11 +302,11 @@
         <div class="template-card">
             <video class="template-video" src="videos/realtor-template2.mp4" autoplay loop muted controls playsinline></video>
             <h4>Property Pro</h4>
-            <p>Impress with:</p>
+            <p>COMING SOON</p>
             <ul>
-                <li>Client testimonials carousel</li>
-                <li>Professional property galleries</li>
-                <li>SEO optimized for local searches</li>
+                <li>COMING SOON</li>
+                <li>COMING SOON</li>
+                <li>COMING SOON</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal14')">Preview & Customize</button>
         </div>
@@ -315,12 +315,11 @@
         <div class="template-card">
             <video class="template-video" src="videos/realtor-template3.mp4" autoplay loop muted controls playsinline></video>
             <h4>Dream Homes</h4>
-            <p>Appeal to luxury buyers with:</p>
+            <p>COMING SOON</p>
             <ul>
-                <li>High-definition property videos</li>
-                <li>Exclusive listings showcase</li>
-                <li>Design for high-end aesthetics</li>
-            </ul>
+                <li>COMING SOON</li>
+                <li>COMING SOON</li>
+                <li>COMING SOON</li>
             <button class="cta-btn" onclick="openModal('modal15')">Preview & Customize</button>
         </div>
 
@@ -328,12 +327,11 @@
         <div class="template-card">
             <video class="template-video" src="videos/realtor-template4.mp4" autoplay loop muted controls playsinline></video>
             <h4>Modern Listings</h4>
-            <p>Modernize your approach with:</p>
+            <p>COMING SOON</p>
             <ul>
-                <li>Minimalist design for clarity</li>
-                <li>Real-time market updates</li>
-                <li>Integrated mortgage calculator</li>
-            </ul>
+                <li>COMING SOON</li>
+                <li>COMING SOON</li>
+                <li>COMING SOON</li>
             <button class="cta-btn" onclick="openModal('modal16')">Preview & Customize</button>/a>
         </div>
     </div>
@@ -544,7 +542,7 @@ function closeModal(event, modalId) {
             <li>$15 a month maintenance fee</li>
             <li>Customizable: Color, content, font, images</li>
         </ul>
-        <button class="cta-btn modal-cta-btn" onclick="window.open('path/to/foodtruck-template4.html', '_blank')">Live View</button>
+        <button class="cta-btn modal-cta-btn" onclick="window.open('Resources/Resume/Template 3/index.html')">Live View</button>
     </div>
 </div>
 
@@ -559,7 +557,7 @@ function closeModal(event, modalId) {
             <li>$15 a month maintenance fee</li>
             <li>Customizable: Color, content, font, images</li>
         </ul>
-        <button class="cta-btn modal-cta-btn" onclick="window.open('path/to/foodtruck-template4.html', '_blank')">Live View</button>
+        <button class="cta-btn modal-cta-btn" onclick="window.open('Resources/Resume/Template 4/index.html')">Live View</button>
     </div>
 </div>
 
@@ -609,7 +607,7 @@ function closeModal(event, modalId) {
             <li>$15 a month maintenance fee</li>
             <li>Customizable: Color, content, font, images</li>
         </ul>
-        <button class="cta-btn modal-cta-btn" onclick="window.open('path/to/foodtruck-template4.html', '_blank')">Live View</button>
+        <button class="cta-btn modal-cta-btn" onclick="window.open('Resources/Relator/Template 1/index.html')">Live View</button>
     </div>
 </div>
 
@@ -624,7 +622,7 @@ function closeModal(event, modalId) {
             <li>$15 a month maintenance fee</li>
             <li>Customizable: Color, content, font, images</li>
         </ul>
-        <button class="cta-btn modal-cta-btn" onclick="window.open('path/to/foodtruck-template4.html', '_blank')">Live View</button>
+        <button class="cta-btn modal-cta-btn" onclick="window.open('Resources/Relator/Template 1/index.html')">Live View</button>
     </div>
 </div>
 
@@ -639,7 +637,7 @@ function closeModal(event, modalId) {
             <li>$15 a month maintenance fee</li>
             <li>Customizable: Color, content, font, images</li>
         </ul>
-        <button class="cta-btn modal-cta-btn" onclick="window.open('path/to/foodtruck-template4.html', '_blank')">Live View</button>
+        <button class="cta-btn modal-cta-btn" onclick="window.open('Resources/Relator/Template 1/index.html')">Live View</button>
     </div>
 </div>
 
