--- a/templates.html
+++ b/templates.html
@@ -193,12 +193,12 @@
         <!-- Template 4: Corporate Charm -->
         <div class="template-card">
             <video class="template-video" src="videos/smallbiz-template4.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Corporate Charm</h4>
-            <p>COMING SOON</p>
+            <h4>Construction Portfolio</h4>
+            <p>Show the world your craft:</p>
             <ul>
-                <li>COMING SOON</li>
-                <li>COMING SOON</li>
-                <li>COMING SOON</li>
+                <li>Streamlined user experience</li>
+                <li>Quick product filters</li>
+                <li>Easy inventory management</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal8')">Preview & Customize</button>
         </div>
@@ -222,7 +222,7 @@
         <!-- Template 1: Online Shop Pro -->
         <div class="template-card">
             <video class="template-video" src="videos/ecommerce-template1.mp4" autoplay loop muted controls playsinline></video>
-            <h4>software Resume</h4>
+            <h4>Standout</h4>
             <p>Your all-in-one solution to avoid a boring resume:</p>
             <ul>
                 <li>Customizable</li>
@@ -248,13 +248,12 @@
         <!-- Template 3: Shop Express -->
         <div class="template-card">
             <video class="template-video" src="videos/ecommerce-template3.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Construction Portfolio</h4>
-            <p>Show the world your craft:</p>
+            <h4>Modern Design</h4>
+            <p>Will Put your Resume Link here</p>
             <ul>
-                <li>Streamlined user experience</li>
-                <li>Quick product filters</li>
-                <li>Easy inventory management</li>
-            </ul>
+                <li>COMING SOON</li>
+                <li>COMING SOON</li>
+                <li>COMING SOON</li>
             <button class="cta-btn" onclick="openModal('modal11')">Preview & Customize</button>
         </div>
 
@@ -480,7 +479,7 @@ function closeModal(event, modalId) {
             <li>$15 a month maintenance fee</li>
             <li>Customizable: Color, content, font, images</li>
         </ul>
-        <button class="cta-btn modal-cta-btn" onclick="window.open('Resources/BS/Template 4/index.html')">Live View</button>
+        <button class="cta-btn modal-cta-btn" onclick="window.open('Resources/Resume/Template 3/index.html')">Live View</button>
     </div>
 </div>
 
