--- a/templates.html
+++ b/templates.html
@@ -264,8 +264,8 @@
             <p>Set trends with:</p>
             <ul>
                 <li>High-definition lookbooks</li>
-                <li>Virtual fitting room integration</li>
-                <li>skill integration</li>
+                <li>full content integration</li>
+                <li>integrated contact page</li>
             </ul>
             <button class="cta-btn" onclick="openModal('modal12')">Preview & Customize</button>
         </div>
