--- a/templates.html
+++ b/templates.html
@@ -319,6 +319,7 @@
                 <li>COMING SOON</li>
                 <li>COMING SOON</li>
                 <li>COMING SOON</li>
+            </ul>
             <button class="cta-btn" onclick="openModal('modal15')">Preview & Customize</button>
         </div>
 
@@ -331,7 +332,8 @@
                 <li>COMING SOON</li>
                 <li>COMING SOON</li>
                 <li>COMING SOON</li>
-            <button class="cta-btn" onclick="openModal('modal16')">Preview & Customize</button>/a>
+            </ul>
+            <button class="cta-btn" onclick="openModal('modal16')">Preview & Customize</button>
         </div>
     </div>
 </div>
