rename and updates to templates

--- a/templates.html
+++ b/templates.html
@@ -221,7 +221,7 @@
     <div class="template-grid">
         <!-- Template 1: Online Shop Pro -->
         <div class="template-card">
-            <video class="template-video" src="videos/ecommerce-template1.mp4" autoplay loop muted controls playsinline></video>
+            <video class="template-video" src="videos/resume-template1.mp4" autoplay loop muted controls playsinline></video>
             <h4>Standout</h4>
             <p>Your all-in-one solution to avoid a boring resume:</p>
             <ul>
@@ -234,7 +234,7 @@
 
         <!-- Template 2: Retail Master -->
         <div class="template-card">
-            <video class="template-video" src="videos/ecommerce-template2.mp4" autoplay loop muted controls playsinline></video>
+            <video class="template-video" src="videos/resume-template2.mp4" autoplay loop muted controls playsinline></video>
             <h4>Basic Template</h4>
             <p>Boost your sales with:</p>
             <ul>
@@ -286,7 +286,7 @@
     <div class="template-grid">
         <!-- Template 1: Realty Showcase -->
         <div class="template-card">
-            <video class="template-video" src="videos/realtor-template1.mp4" autoplay loop muted controls playsinline></video>
+            <video class="template-video" src="videos/relator-template1.mp4" autoplay loop muted controls playsinline></video>
             <h4>Elite Luxury Estates</h4>
             <p>Highlight your listings with:</p>
             <ul>
