--- a/templates.html
+++ b/templates.html
@@ -247,15 +247,17 @@
 
         <!-- Template 3: Shop Express -->
         <div class="template-card">
-            <video class="template-video" src="videos/ecommerce-template3.mp4" autoplay loop muted controls playsinline></video>
-            <h4>Modern Design</h4>
-            <p>Will Put your Resume Link here</p>
+            <video class="template-video" src="videos/resume-template3.mp4" autoplay loop muted controls playsinline></video>
+            <h4>Dynamic Professional</h4>
+            <p>Elevate your resume with an interactive and modern design:</p>
             <ul>
-                <li>COMING SOON</li>
-                <li>COMING SOON</li>
-                <li>COMING SOON</li>
+                <li>Collapsible sidebar navigation</li>
+                <li>Animated particles background effect</li>
+                <li>Responsive and fully customizable layout</li>
+            </ul>
             <button class="cta-btn" onclick="openModal('modal11')">Preview & Customize</button>
         </div>
+        
 
         <!-- Template 4: Fashion Forward -->
         <div class="template-card">
@@ -505,7 +507,7 @@ function closeModal(event, modalId) {
 <div id="modal9" class="modal" role="dialog" aria-labelledby="modal-title-9" onclick="closeModal(event, 'modal9')">
     <div class="modal-content" onclick="event.stopPropagation();">
         <span class="close" onclick="closeModal(event, 'modal9')" aria-label="Close">&times;</span>
-        <video src="videos/ecommerce-template1.mp4" controls poster="path/to/poster9.jpg" aria-describedby="video-desc-9"></video>
+        <video src="videos/resume-template1.mp4" controls poster="path/to/poster9.jpg" aria-describedby="video-desc-9"></video>
         <h3 id="modal-title-9">Online Shop Pro</h3>
         <p id="video-desc-9">This template is built for e-commerce stores, with a focus on product displays and easy navigation for customers.</p>
         <ul></ul>
@@ -520,7 +522,7 @@ function closeModal(event, modalId) {
 <div id="modal10" class="modal" role="dialog" aria-labelledby="modal-title-10" onclick="closeModal(event, 'modal10')">
     <div class="modal-content" onclick="event.stopPropagation();">
         <span class="close" onclick="closeModal(event, 'modal10')" aria-label="Close">&times;</span>
-        <video src="videos/ecommerce-template2.mp4" controls poster="path/to/poster10.jpg" aria-describedby="video-desc-10"></video>
+        <video src="videos/resume-template2.mp4" controls poster="path/to/poster10.jpg" aria-describedby="video-desc-10"></video>
         <h3 id="modal-title-10">Retail Master</h3>
         <p id="video-desc-10">An interactive, high-converting template designed to help you maximize your online sales with a clean, responsive design.</p>
         <ul></ul>
@@ -535,15 +537,15 @@ function closeModal(event, modalId) {
 <div id="modal11" class="modal" role="dialog" aria-labelledby="modal-title-11" onclick="closeModal(event, 'modal11')">
     <div class="modal-content" onclick="event.stopPropagation();">
         <span class="close" onclick="closeModal(event, 'modal11')" aria-label="Close">&times;</span>
-        <video src="videos/ecommerce-template3.mp4" controls poster="path/to/poster11.jpg" aria-describedby="video-desc-11"></video>
-        <h3 id="modal-title-11">Shop Express</h3>
-        <p id="video-desc-11">Built for fast loading and easy navigation for new online shops.</p>
+        <video src="videos/resume-template5.mp4" controls poster="path/to/poster11.jpg" aria-describedby="video-desc-11"></video>
+        <h3 id="modal-title-11">Developers Resume</h3>
+        <p id="video-desc-11">Built for fast loading and easy navigation</p>
         <ul></ul>
             <li>Starting Price $250</li>
             <li>$15 a month maintenance fee</li>
             <li>Customizable: Color, content, font, images</li>
         </ul>
-        <button class="cta-btn modal-cta-btn" onclick="window.open('Resources/Resume/Template 3/index.html')">Live View</button>
+        <button class="cta-btn modal-cta-btn" onclick="window.open('Resources/Resume/Template 5/index.html')">Live View</button>
     </div>
 </div>
 
